; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/picomodel/extr_picointernal.c__pico_parse_vec4.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/picomodel/extr_picointernal.c__pico_parse_vec4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_pico_parse_vec4(i32* %0, float* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca float*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store float* %1, float** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load float*, float** %5, align 8
  %12 = icmp eq float* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %40

14:                                               ; preds = %10
  %15 = load float*, float** %5, align 8
  %16 = call i32 @_pico_zero_vec4(float* %15)
  store i32 0, i32* %7, align 4
  br label %17

17:                                               ; preds = %36, %14
  %18 = load i32, i32* %7, align 4
  %19 = icmp slt i32 %18, 4
  br i1 %19, label %20, label %39

20:                                               ; preds = %17
  %21 = load i32*, i32** %4, align 8
  %22 = call i8* @_pico_parse(i32* %21, i32 0)
  store i8* %22, i8** %6, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = icmp eq i8* %23, null
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load float*, float** %5, align 8
  %27 = call i32 @_pico_zero_vec4(float* %26)
  store i32 0, i32* %3, align 4
  br label %40

28:                                               ; preds = %20
  %29 = load i8*, i8** %6, align 8
  %30 = call i64 @atof(i8* %29)
  %31 = sitofp i64 %30 to float
  %32 = load float*, float** %5, align 8
  %33 = load i32, i32* %7, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds float, float* %32, i64 %34
  store float %31, float* %35, align 4
  br label %36

36:                                               ; preds = %28
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %7, align 4
  br label %17

39:                                               ; preds = %17
  store i32 1, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %25, %13
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @_pico_zero_vec4(float*) #1

declare dso_local i8* @_pico_parse(i32*, i32) #1

declare dso_local i64 @atof(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
